Remove mark.js & fix Ajax issues on Firefox

--- a/src/content_script/css/websites-sources.scss
+++ b/src/content_script/css/websites-sources.scss
@@ -17,7 +17,7 @@
   display: none;
   position: absolute;
   width: 50px;
-  -webkit-filter: drop-shadow(0px 1px 2px rgba(0,0,0,0.5));
+  filter: drop-shadow(0px 1px 2px rgba(0,0,0,0.5));
   z-index: 1000001;
   border: 0;
   margin: 0;
@@ -52,7 +52,7 @@
   position: fixed;
   right: 47px;
   top: 39px;
-  font-size: 20px;
+  font-size: 28px;
   color: #aaa;
   z-index: 1000000002;
 }
